kube-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-api-service
  namespace: secure-app
spec:
  selector:
    app: ci-api
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
